src/objects/MIBNF__x.object
<CustomObject>
    <fields>
        <fullName>Sales_Org_Code_c__c</fullName>
        <externalDeveloperName>Sales_Org_Code__c</externalDeveloperName>
        <label>IMS Billing Org Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE01</fullName>
                </value>
                <value>
                    <fullName>AR01</fullName>
                </value>
                <value>
                    <fullName>AR02</fullName>
                </value>
                <value>
                    <fullName>AR71</fullName>
                </value>
                <value>
                    <fullName>AT52</fullName>
                </value>
                <value>
                    <fullName>AT71</fullName>
                </value>
                <value>
                    <fullName>AU01</fullName>
                </value>
                <value>
                    <fullName>AU20</fullName>
                </value>
                <value>
                    <fullName>BD01</fullName>
                </value>
                <value>
                    <fullName>BE03</fullName>
                </value>
                <value>
                    <fullName>BE04</fullName>
                </value>
                <value>
                    <fullName>BE51</fullName>
                </value>
                <value>
                    <fullName>BE52</fullName>
                </value>
                <value>
                    <fullName>BE72</fullName>
                </value>
                <value>
                    <fullName>BE73</fullName>
                </value>
                <value>
                    <fullName>BO01</fullName>
                </value>
                <value>
                    <fullName>BR01</fullName>
                </value>
                <value>
                    <fullName>BR05</fullName>
                </value>
                <value>
                    <fullName>BR71</fullName>
                </value>
                <value>
                    <fullName>BT01</fullName>
                </value>
                <value>
                    <fullName>CA03</fullName>
                </value>
                <value>
                    <fullName>CA04</fullName>
                </value>
                <value>
                    <fullName>CA10</fullName>
                </value>
                <value>
                    <fullName>CA15</fullName>
                </value>
                <value>
                    <fullName>CH03</fullName>
                </value>
                <value>
                    <fullName>CH07</fullName>
                </value>
                <value>
                    <fullName>CH08</fullName>
                </value>
                <value>
                    <fullName>CH12</fullName>
                </value>
                <value>
                    <fullName>CH13</fullName>
                </value>
                <value>
                    <fullName>CH51</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specification_c__c</fullName>
        <externalDeveloperName>Specification__c</externalDeveloperName>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyte</fullName>
                </value>
                <value>
                    <fullName>Class 5</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>ICD 9</fullName>
                </value>
                <value>
                    <fullName>Manufactuer/Corp</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>USC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Type_c__c</fullName>
        <externalDeveloperName>Subscription_Type__c</externalDeveloperName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Dataview</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Syndicated.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Therapy_Area_c__c</fullName>
        <externalDeveloperName>Therapy_Area__c</externalDeveloperName>
        <label>Therapy Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allergy [25]</fullName>
                </value>
                <value>
                    <fullName>Antibiotics, Antifungals [1]</fullName>
                </value>
                <value>
                    <fullName>Autoimmune biologics [18]</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular [2]</fullName>
                </value>
                <value>
                    <fullName>Central Nervous System [3]</fullName>
                </value>
                <value>
                    <fullName>Dermatology [4]</fullName>
                </value>
                <value>
                    <fullName>Diabetes [5]</fullName>
                </value>
                <value>
                    <fullName>Erytropoetine (EPO) [19]</fullName>
                </value>
                <value>
                    <fullName>Female Health [6]</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology [7]</fullName>
                </value>
                <value>
                    <fullName>Growth Hormone [20]</fullName>
                </value>
                <value>
                    <fullName>Hepatitis C [21]</fullName>
                </value>
                <value>
                    <fullName>HIV, Anti-virals [8]</fullName>
                </value>
                <value>
                    <fullName>Immunomodulators [22]</fullName>
                </value>
                <value>
                    <fullName>Kidney Disease [26]</fullName>
                </value>
                <value>
                    <fullName>Mental Health [27]</fullName>
                </value>
                <value>
                    <fullName>Metabolics [9]</fullName>
                </value>
                <value>
                    <fullName>Multiple [24]</fullName>
                </value>
                <value>
                    <fullName>Multiple Sclerosis [23]</fullName>
                </value>
                <value>
                    <fullName>None [0]</fullName>
                </value>
                <value>
                    <fullName>Oncology [10]</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology [17]</fullName>
                </value>
                <value>
                    <fullName>Pain [11]</fullName>
                </value>
                <value>
                    <fullName>Rare Disease [28]</fullName>
                </value>
                <value>
                    <fullName>Respiratory [12]</fullName>
                </value>
                <value>
                    <fullName>Rheumatoid Arthritis [13]</fullName>
                </value>
                <value>
                    <fullName>Transplantation [14]</fullName>
                </value>
                <value>
                    <fullName>Urology [15]</fullName>
                </value>
                <value>
                    <fullName>Vaccines [16]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Multi Invoice BNF</label>
    <pluralLabel>Multi Invoice BNF&apos;s</pluralLabel>
</CustomObject>